--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <!--[if lt IE 10]><p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" upgrade your browser to improve your experience.</p>-->
